@@ -19,11 +19,15 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha1...master[Check the HEAD d
 
 *Filebeat*
 
+- Allow beats to blacklist certain part of the configuration while using Central Management. {pull}9099[9099]
+
 *Heartbeat*
 
 *Journalbeat*
 
 *Metricbeat*
+
+- Allow beats to blacklist certain part of the configuration while using Central Management. {pull}9099[9099]
 
 *Packetbeat*
 
